Done: Quick alignment fix

--- a/css/thesignal-csdataproject.css
+++ b/css/thesignal-csdataproject.css
@@ -116,7 +116,7 @@ a {
 }
 
 .fb-like {
-    margin-top: 12px;
+    margin-top: 0;
 }
 
 #subscribe-newsletter {
